<resources>
    <string name="app_name">Workout Log</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="sign_up">Don\'t have an account?<u>Sign Up</u> </string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="log_in">Already have an account?<u>Log In</u> </string>
    <string name="plan">Plan</string>
    <string name="track">Track</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plan_fragment">PLAN FRAGMENT</string>
    <string name="profile_fragment">PROFILE FRAGMENT</string>
    <string name="phone_number">Phone Number</string>
</resources>